--- a/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.0.json
@@ -23,9 +23,242 @@
     }
   ],
   "activities": {
+    "createEvent": {
+      "description": "Create a new event",
+      "type": "event",
+      "name": "CreateEvent",
+      "value": {
+        "$ref": "#/definitions/eventInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/operationStatus"
+      }
+    },
+    "updateEvent": {
+      "description": "Update the time of an existing event",
+      "type": "event",
+      "name": "UpdateEvent",
+      "value": {
+        "$ref": "#/definitions/updateEventInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/operationStatus"
+      }
+    },
+    "showEvent": {
+      "description": "Show an existing event",
+      "type": "event",
+      "name": "ShowEvent",
+      "value": {
+        "$ref": "#/definitions/chooseEventInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/eventInfo"
+      }
+    },
+    "acceptEvent": {
+      "description": "Accept an existing event",
+      "type": "event",
+      "name": "AcceptEvent",
+      "value": {
+        "$ref": "#/definitions/chooseEventInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/operationStatus"
+      }
+    },
+    "deleteEvent": {
+      "description": "Delete(as organizer) or Decline(as invitee) an existing event",
+      "type": "event",
+      "name": "DeleteEvent",
+      "value": {
+        "$ref": "#/definitions/chooseEventInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/operationStatus"
+      }
+    },
+    "joinEvent": {
+      "description": "Join an existing event",
+      "type": "event",
+      "name": "JoinEvent",
+      "value": {
+        "$ref": "#/definitions/chooseEventInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/operationStatus"
+      }
+    },
+    "timeRemaining": {
+      "description": "Find out how long until a specific event",
+      "type": "event",
+      "name": "TimeRemaining",
+      "value": {
+        "$ref": "#/definitions/chooseEventInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/timeRemainingOutput"
+      }
+    },
+    "summary": {
+      "description": "Retrieve a summary of meetings",
+      "type": "event",
+      "name": "Summary",
+      "value": {
+        "$ref": "#/definitions/dateInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/eventSummary"
+      }
+    },
     "message": {
       "type": "message",
-      "description": "Receives the users utterance and attempts to resolve it using the skill's LU models"
+      "description": "Receives the user's utterance and attempts to resolve it using the skill's LU models"
+    }
+  },
+  "definitions": {
+    "eventInfo": {
+      "type": "object",
+      "required": [],
+      "properties": {
+        "title": {
+          "type": "string",
+          "description": "Title of the meeting"
+        },
+        "content": {
+          "type": "string",
+          "description": "Description of the meeting"
+        },
+        "attendees": {
+          "type": "string",
+          "description": "Semicolon separated list of email addresses to invite"
+        },
+        "startDate": {
+          "type": "string",
+          "description": "Start date of the meeting in YYYY-MM-DD format"
+        },
+        "startTime": {
+          "type": "string",
+          "description": "Start time of the meeting in HH-MM format"
+        },
+        "endDate": {
+          "type": "string",
+          "description": "End date of the meeting in YYYY-MM-DD format"
+        },
+        "endTime": {
+          "type": "string",
+          "description": "End time of the meeting in HH-MM format"
+        },
+        "duration": {
+          "type": "number",
+          "description": "The duration of the meeting in minutes"
+        },
+        "location": {
+          "type": "string",
+          "description": "The location for the meeting"
+        },
+        "timezone": {
+          "type": "string",
+          "description": "The timezone to create the meeting in"
+        }
+      }
+    },
+    "updateEventInfo": {
+      "type": "object",
+      "required": [],
+      "properties": {
+        "title": {
+          "type": "string",
+          "description": "Title of the meeting"
+        },
+        "startDate": {
+          "type": "string",
+          "description": "Current start date of the meeting in YYYY-MM-DD format"
+        },
+        "startTime": {
+          "type": "string",
+          "description": "Current start time of the meeting in HH-MM format"
+        },
+        "newStartDate": {
+          "type": "string",
+          "description": "New start date of the meeting in YYYY-MM-DD format"
+        },
+        "newStartTime": {
+          "type": "string",
+          "description": "New start time of the meeting in HH-MM format"
+        },
+        "moveTimeSpan": {
+          "type": "number",
+          "description": "Time to shift earlier or later in minutes"
+        },
+        "timezone": {
+          "type": "string",
+          "description": "The current user's timezone"
+        }
+      }
+    },
+    "chooseEventInfo": {
+      "type": "object",
+      "required": [],
+      "properties": {
+        "nextEvent": {
+          "type": "boolean",
+          "description": "Choose the Next meeting directly"
+        },
+        "title": {
+          "type": "string",
+          "description": "Title of the meeting"
+        },
+        "startDate": {
+          "type": "string",
+          "description": "Start date of the meeting in YYYY-MM-DD format"
+        },
+        "startTime": {
+          "type": "string",
+          "description": "Start time of the meeting in HH-MM format"
+        },
+        "timezone": {
+          "type": "string",
+          "description": "The current user's timezone"
+        }
+      }
+    },
+    "operationStatus": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "boolean",
+          "description": "An operation status indicating success or failure"
+        }
+      }
+    },
+    "timeRemainingOutput": {
+      "type": "object",
+      "properties": {
+        "remainingTime": {
+          "type": "number",
+          "description": "The remaining time in minutes"
+        }
+      }
+    },
+    "dateInfo": {
+      "type": "object",
+      "properties": {
+        "date": {
+          "type": "string",
+          "description": "Date of the meetings in YYYY-MM-DD format"
+        },
+        "timezone": {
+          "type": "string",
+          "description": "The current user's timezone"
+        }
+      }
+    },
+    "eventSummary": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/eventInfo"
+      }
     }
   }
 }
