--- a/skills/csharp/experimental/eventskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/experimental/eventskill/wwwroot/manifest/manifest-1.0.json
@@ -1,44 +1,27 @@
 {
   "$schema": "https://schemas.botframework.com/schemas/skills/skill-manifest-2.0.0.json",
-  "$id": "MusicSkill",
-  "name": "Music Skill",
-  "description": "The Music Skill searches for music using Spotify",
+  "$id": "EventSkill",
+  "name": "Event Skill",
+  "description": "The Event skill provides general event capabilities.",
   "publisherName": "Microsoft",
   "version": "0.8",
-  "iconUrl": "https://{YOUR_SKILL_URL}/images/MusicSkill.png",
+  "iconUrl": "https://{YOUR_SKILL_URL}/images/EventSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
   "privacyUrl": "https://{YOUR_SKILL_URL}/privacy.html",
   "tags": [
-    "music",
+    "event",
     "skill"
   ],
   "endpoints": [
     {
       "name": "production",
       "protocol": "BotFrameworkV3",
-      "description": "Production endpoint for the Music Skill",
+      "description": "Production endpoint for the Event Skill",
       "endpointUrl": "https://{YOUR_SKILL_URL}/api/messages",
       "msAppId": "{YOUR_SKILL_APPID}"
     }
   ],
-  "dispatchModels": {
-    "languages": {
-      "en-us": [
-        {
-          "id": "MusicSkillLuModel-en",
-          "name": "Music LU (English)",
-          "contentType": "application/lu",
-          "url": "file://MusicSkill.lu",
-          "description": "English language model for the skill"
-        }
-      ]
-    },
-    "intents": {
-      "PlayMusic": "#/activities/message",
-      "*": "#/activities/message"
-    }
-  },
   "activities": {
     "message": {
       "type": "message",
