--- a/skills/csharp/experimental/eventskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/experimental/eventskill/wwwroot/manifest/manifest-1.1.json
@@ -1,23 +1,23 @@
 {
   "$schema": "https://schemas.botframework.com/schemas/skills/skill-manifest-2.0.0.json",
-  "$id": "WeatherSkill",
-  "name": "Weather Skill",
-  "description": "The Weather skill provides an example of displaying the current weather using AccuWeather.",
+  "$id": "EventSkill",
+  "name": "Event Skill",
+  "description": "The Event skill provides general event capabilities.",
   "publisherName": "Microsoft",
   "version": "0.8",
-  "iconUrl": "https://{YOUR_SKILL_URL}/images/WeatherSkill.png",
+  "iconUrl": "https://{YOUR_SKILL_URL}/images/EventSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
   "privacyUrl": "https://{YOUR_SKILL_URL}/privacy.html",
   "tags": [
-    "weather",
+    "event",
     "skill"
   ],
   "endpoints": [
     {
       "name": "production",
       "protocol": "BotFrameworkV3",
-      "description": "Production endpoint for the Weather Skill",
+      "description": "Production endpoint for the Event Skill",
       "endpointUrl": "https://{YOUR_SKILL_URL}/api/messages",
       "msAppId": "{YOUR_SKILL_APPID}"
     }
@@ -26,16 +26,18 @@
     "languages": {
       "en-us": [
         {
-          "id": "WeatherSkillLuModel-en",
-          "name": "Weather LU (English)",
+          "id": "EventSkillLuModel-en",
+          "name": "EventSkill LU (English)",
           "contentType": "application/lu",
-          "url": "file://WeatherSkill.lu",
+          "url": "file://EventSkill.lu",
           "description": "English language model for the skill"
         }
       ]
     },
     "intents": {
-      "CheckWeatherValue": "#/activities/message",
+      "GetCelebrityInfo": "#/activities/message",
+      "SearchMovieInfo": "#/activities/message",
+      "QueryQna": "#/activities/message",
       "*": "#/activities/message"
     }
   },
