fix description case error

--- a/skills/csharp/experimental/bingsearchskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/experimental/bingsearchskill/wwwroot/manifest/manifest-1.0.json
@@ -62,7 +62,7 @@
         },
         "actionSuccess": {
           "type": "bool",
-          "description": "result of action"
+          "description": "Result of action"
         }
       }
     }
