--- a/skills/csharp/experimental/bingsearchskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/experimental/bingsearchskill/wwwroot/manifest/manifest-1.1.json
@@ -81,7 +81,7 @@
         },
         "actionSuccess": {
           "type": "bool",
-          "description": "result of action"
+          "description": "Result of action"
         }
       }
     }
