fix initial capital issue

--- a/skills/csharp/experimental/newsskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/experimental/newsskill/wwwroot/manifest/manifest-1.1.json
@@ -70,7 +70,7 @@
       }
     },
     "findArticles": {
-      "description": "search articles by keyword and site",
+      "description": "Search articles by keyword and site",
       "type": "event",
       "name": "FindArticles",
       "value": {
