--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -11,7 +11,12 @@ reviewers:
   - lzc850612 
   - pavolum
   - ryanlengel 
-
+  - bobokids
+  - kaymkm
+  - ssss141414
+  - xhr0804
+  - xieofxie
+  
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
 numberOfReviewers: 0
