--- a/skills/csharp/todoskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/todoskill/wwwroot/manifest/manifest-1.0.json
@@ -27,6 +27,112 @@
     "message": {
       "type": "message",
       "description": "Receives the users utterance and attempts to resolve it using the skill's LU models"
+    },
+    "addToDo": {
+      "description": "Add a ToDo task.",
+      "type": "event",
+      "name": "AddToDo",
+      "value": {
+        "$ref": "#/definitions/todoInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/todoList"
+      }
+    },
+    "deleteToDo": {
+      "description": "Delete a ToDo task",
+      "type": "event",
+      "name": "DeleteToDo",
+      "value": {
+        "$ref": "#/definitions/todoInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/todoList"
+      }
+    },
+    "deleteAll": {
+      "description": "Delete all tasks",
+      "type": "event",
+      "name": "DeleteAll",
+      "value": {
+        "$ref": "#/definitions/listInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/actionResult"
+      }
+    },
+    "markToDo": {
+      "description": "Mark a ToDo task as completed.",
+      "type": "event",
+      "name": "MarkToDo",
+      "value": {
+        "$ref": "#/definitions/todoInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/todoList"
+      }
+    },
+    "markAll": {
+      "description": "Mark all tasks as completed",
+      "type": "event",
+      "name": "MarkAll",
+      "value": {
+        "$ref": "#/definitions/listInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/actionResult"
+      }
+    },
+    "showToDo": {
+      "description": "Show ToDo list.",
+      "type": "event",
+      "name": "ShowToDo",
+      "value": {
+        "$ref": "#/definitions/listInfo"
+      },
+      "resultValue": {
+        "$ref": "#/definitions/todoList"
+      }
+    }
+  },
+  "definitions": {
+    "todoInfo": {
+      "type": "object",
+      "properties": {
+        "listType": {
+          "type": "string",
+          "description": "List type: todo, shopping or grocery."
+        },
+        "taskName": {
+          "type": "string",
+          "description": "Task name."
+        }
+      }
+    },
+    "listInfo": {
+      "type": "object",
+      "properties": {
+        "listType": {
+          "type": "string",
+          "description": "List type: todo, shopping or grocery."
+        }
+      }
+    },
+    "todoList": {
+      "type": "array",
+      "description": "List of todo tasks",
+      "items": {
+        "type": "string"
+      }
+    },
+    "actionResult": {
+      "type": "object",
+      "properties": {
+        "actionSuccess": {
+          "type": "bool",
+          "description": "result of action"
+        }
+      }
     }
   }
 }
