--- a/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/calendarskill/wwwroot/manifest/manifest-1.0.json
@@ -135,19 +135,19 @@
         },
         "startDate": {
           "type": "string",
-          "description": "Start date of the meeting in YYYY-MM-DD format"
+          "description": "Start date of the meeting in yyyy-MM-dd format"
         },
         "startTime": {
           "type": "string",
-          "description": "Start time of the meeting in HH-MM format"
+          "description": "Start time of the meeting in HH:mm format"
         },
         "endDate": {
           "type": "string",
-          "description": "End date of the meeting in YYYY-MM-DD format"
+          "description": "End date of the meeting in yyyy-MM-dd format"
         },
         "endTime": {
           "type": "string",
-          "description": "End time of the meeting in HH-MM format"
+          "description": "End time of the meeting in HH:mm format"
         },
         "duration": {
           "type": "number",
@@ -173,19 +173,19 @@
         },
         "startDate": {
           "type": "string",
-          "description": "Current start date of the meeting in YYYY-MM-DD format"
+          "description": "Current start date of the meeting in yyyy-MM-dd format"
         },
         "startTime": {
           "type": "string",
-          "description": "Current start time of the meeting in HH-MM format"
+          "description": "Current start time of the meeting in HH:mm format"
         },
         "newStartDate": {
           "type": "string",
-          "description": "New start date of the meeting in YYYY-MM-DD format"
+          "description": "New start date of the meeting in yyyy-MM-dd format"
         },
         "newStartTime": {
           "type": "string",
-          "description": "New start time of the meeting in HH-MM format"
+          "description": "New start time of the meeting in HH:mm format"
         },
         "moveTimeSpan": {
           "type": "number",
@@ -211,11 +211,11 @@
         },
         "startDate": {
           "type": "string",
-          "description": "Start date of the meeting in YYYY-MM-DD format"
+          "description": "Start date of the meeting in yyyy-MM-dd format"
         },
         "startTime": {
           "type": "string",
-          "description": "Start time of the meeting in HH-MM format"
+          "description": "Start time of the meeting in HH:mm format"
         },
         "timezone": {
           "type": "string",
@@ -246,7 +246,7 @@
       "properties": {
         "date": {
           "type": "string",
-          "description": "Date of the meetings in YYYY-MM-DD format"
+          "description": "Date of the meetings in yyyy-MM-dd format"
         },
         "timezone": {
           "type": "string",
