--- a/skills/csharp/experimental/restaurantbookingskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/experimental/restaurantbookingskill/wwwroot/manifest/manifest-1.1.json
@@ -44,12 +44,12 @@
       "type": "message",
       "description": "Receives the users utterance and attempts to resolve it using the skill's LU models"
     },
-    "booking": {
+    "restaurantReservation": {
       "description": "Make a reservation.",
       "type": "event",
-      "name": "Booking",
+      "name": "RestaurantReservation",
       "value": {
-        "$ref": "#/definitions/bookingInfo"
+        "$ref": "#/definitions/reservationInfo"
       },
       "resultValue": {
         "$ref": "#/definitions/actionResult"
@@ -57,7 +57,7 @@
     }
   },
   "definitions": {
-    "bookingInfo": {
+    "reservationInfo": {
       "type": "object",
       "properties": {
         "foodType": {
@@ -76,7 +76,7 @@
           "type": "number",
           "description": "The number of attendees."
         },
-        "bookingPlace": {
+        "restaurantName": {
           "type": "string",
           "description": "The name of restaurant."
         }
