--- a/skills/csharp/experimental/automotiveskill/AutomotiveSkill.csproj
+++ b/skills/csharp/experimental/automotiveskill/AutomotiveSkill.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.7.2" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.7.2" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.7.2" />
+    <PackageReference Include="Microsoft.Bot.Builder.LanguageGeneration" Version="4.7.2-preview" />
     <PackageReference Include="Microsoft.Bot.Solutions" Version="0.8.0-preview1" />
     <PackageReference Include="Microsoft.Bot.Configuration" Version="4.7.2" />
     <PackageReference Include="Microsoft.Bot.Connector" Version="4.7.2" />
@@ -85,26 +86,8 @@
     <EmbeddedResource Include="Data\normalization\amount_percentage.tsv" />
     <EmbeddedResource Include="Data\normalization\amount_type.tsv" />
     <EmbeddedResource Include="Data\normalization\amount_unit.tsv" />
-    <EmbeddedResource Include="Responses\Main\AutomotiveSkillMainResponses.json" />
-    <EmbeddedResource Include="Responses\Main\AutomotiveSkillMainResponses.zh.json" />
-    <EmbeddedResource Include="Responses\Main\AutomotiveSkillMainResponses.de.json" />
-    <EmbeddedResource Include="Responses\Main\AutomotiveSkillMainResponses.es.json" />
-    <EmbeddedResource Include="Responses\Main\AutomotiveSkillMainResponses.fr.json" />
-    <EmbeddedResource Include="Responses\Main\AutomotiveSkillMainResponses.it.json" />
-    <EmbeddedResource Include="Responses\Shared\AutomotiveSkillSharedResponses.json" />
-    <EmbeddedResource Include="Responses\Shared\AutomotiveSkillSharedResponses.zh.json" />
-    <EmbeddedResource Include="Responses\Shared\AutomotiveSkillSharedResponses.de.json" />
-    <EmbeddedResource Include="Responses\Shared\AutomotiveSkillSharedResponses.es.json" />
-    <EmbeddedResource Include="Responses\Shared\AutomotiveSkillSharedResponses.fr.json" />
-    <EmbeddedResource Include="Responses\Shared\AutomotiveSkillSharedResponses.it.json" />
     <EmbeddedResource Include="Content\ListSelection.json" />
     <EmbeddedResource Include="Content\SettingChoice.json" />
-    <EmbeddedResource Include="Responses\VehicleSettings\VehicleSettingsResponses.json" />
-    <EmbeddedResource Include="Responses\VehicleSettings\VehicleSettingsResponses.zh.json" />
-    <EmbeddedResource Include="Responses\VehicleSettings\VehicleSettingsResponses.de.json" />
-    <EmbeddedResource Include="Responses\VehicleSettings\VehicleSettingsResponses.es.json" />
-    <EmbeddedResource Include="Responses\VehicleSettings\VehicleSettingsResponses.fr.json" />
-    <EmbeddedResource Include="Responses\VehicleSettings\VehicleSettingsResponses.it.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -117,15 +100,97 @@
     <None Update="Responses\Main\AutomotiveSkillMainResponses.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>AutomotiveSkillMainResponses.cs</LastGenOutput>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Main\MainDialogActivities.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Main\MainDialogTexts.de-de.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Main\MainDialogTexts.es-es.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Main\MainDialogTexts.fr-fr.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Main\MainDialogTexts.it-it.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Main\MainDialogTexts.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Main\MainDialogTexts.zh-cn.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Responses\Shared\AutomotiveSkillSharedResponses.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>AutomotiveSkillSharedResponses.cs</LastGenOutput>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Shared\Card.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Responses\Shared\ResponseIdCollection.t4">
       <Generator></Generator>
+    </None>
+    <None Update="Responses\ResponsesAndTexts\ResponsesAndTexts.de-de.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\ResponsesAndTexts\ResponsesAndTexts.es-es.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\ResponsesAndTexts\ResponsesAndTexts.fr-fr.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\ResponsesAndTexts\ResponsesAndTexts.it-it.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\ResponsesAndTexts\ResponsesAndTexts.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\ResponsesAndTexts\ResponsesAndTexts.zh-cn.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Shared\SharedActivities.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Shared\SharedTexts.de-de.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Shared\SharedTexts.es-es.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Shared\SharedTexts.fr-fr.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Shared\SharedTexts.it-it.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Shared\SharedTexts.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\Shared\SharedTexts.zh-cn.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\VehicleSettings\VehicleSettingsDialogActivities.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\VehicleSettings\VehicleSettingsDialogTexts.de-de.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\VehicleSettings\VehicleSettingsDialogTexts.es-es.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\VehicleSettings\VehicleSettingsDialogTexts.fr-fr.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\VehicleSettings\VehicleSettingsDialogTexts.it-it.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\VehicleSettings\VehicleSettingsDialogTexts.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Responses\VehicleSettings\VehicleSettingsDialogTexts.zh-cn.lg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Responses\VehicleSettings\VehicleSettingsResponses.tt">
       <LastGenOutput>VehicleSettingsResponses.cs</LastGenOutput>
