--- a/skills/csharp/experimental/musicskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/experimental/musicskill/wwwroot/manifest/manifest-1.0.json
@@ -44,7 +44,7 @@
       "type": "object",
       "required": [],
       "properties": {
-        "setting": {
+        "info": {
           "type": "string",
           "description": "Information used to search the music catalogue, e.g. artist name"
         }
